added dropzone element to load a project

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -45,6 +45,7 @@ app:
           tooltip: "Exportieren Sie dieses Diagramm als Text in Ihre Zwischenablage"
         image:
           tooltip: "Dieses Diagramm als Bild exportieren"
+      dropzone: "Ein Projekt hier ablegen"
     actions:
       label: "Aktionen"
       select+move: "Auswählen & Bewegen"
