--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -111,3 +111,12 @@ app:
       title: "Purging Project Data"
       description: "You Project will be purged and any changes you made will be lost forever."
       action: "Purge"
+actions:
+  move-cam:
+    display-name: "Move"
+  select:
+    display-name: "Select"
+  box:
+    display-name: "Box"
+  label:
+    display-name: "Label"
