--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -113,3 +113,16 @@ app:
       title: "Projektdaten bereinigen"
       description: "Ihr Projekt wird gelöscht und alle Änderungen, die Sie vorgenommen haben, gehen für immer verloren."
       action: "Bereinigen"
+actions:
+  move-view:
+    display-name: "Ansicht Bewegen"
+  select:
+    display-name: "Auswählen"
+  box:
+    display-name: "Box"
+  label:
+    display-name: "Label"
+  group:
+    display-name: "Gruppe"
+  progress-bar:
+    display-name: "Fortschrittsbalken"
