--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -59,6 +59,12 @@ app:
         image:
           tooltip: "Export this graph as an image"
       dropzone: "Drop a Project here"
+      purge:
+        tooltip: "Purge all elements and start with a clean project"
+      undo:
+        tooltip: "Reverse your last action and return to the previous state"
+      redo:
+        tooltip: "Restore the action you just undid, moving forward again"
     actions:
       label: "Actions"
       select+move: "Select & Move"
