--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -7,6 +7,11 @@ layout:
     docs: "Dokumentation"
     about: "Über Uns"
     github: "GitHub"
+dialog-common:
+  cancel: "Abbrechen"
+  close: "Schließen"
+  save: "Speichern"
+  delete: "Löschen"
 components:
   locale-toggle:
     tooltip: "Kontrolliert die Sprache der Website"
@@ -16,6 +21,15 @@ components:
       light: "Hell"
       dark: "Dunkel"
       system: "System"
+  project-list:
+    delete:
+      dialog:
+        title: "Projekt Löschen?"
+        description: "Sind Sie sicher, dass Sie Ihr Projekt löschen wollen? Dies kann nicht rückgängig gemacht werden."
+    edit-name:
+      dialog:
+        title: "Projekt Name"
+        description: "Hier können Sie den Namen des Projekts ändern."
 home:
   dev-notice: "Hinweis: Diese App befindet sich in der Entwicklung"
   draw: "Zeichne Etwas"
@@ -40,10 +54,15 @@ docs:
   not-found:
     title: "404 Seite nicht gefunden"
     description: "Die angeforderte URL wurde nicht gefunden. Wenn Sie die URL manuell eingegeben haben, überprüfen Sie bitte Ihre Schreibweise und versuchen Sie es erneut."
+app-init:
+  title: "Projekt Auswahl"
+  description: "Wählen Sie das Projekt, das Sie bearbeiten möchten"
 app:
   menu:
     hide:
       tooltip: "Blende dieses übermäßig große Menü aus"
+    project-list:
+      label: "Projekt Liste"
     project:
       label: "Projekt"
       import:
@@ -74,9 +93,6 @@ app:
       out:
         tooltip: "Verkleinern"
   dialog:
-    common:
-      cancel: "Abbrechen"
-      close: "Schließen"
     share:
       title: "Link zum Teilen"
       description: "Jeder, der diesen Link hat, kann Ihr Diagramm in der aktuellen Version sehen. Änderungen nach dem Kopieren des Links werden nicht übernommen."
