started to add translations to action components

--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -145,6 +145,17 @@ actions:
     display-name: "Select & Move"
   box:
     display-name: "Box"
+    edit:
+      style:
+        label: "Style"
+        style-names:
+          basic: "Basic"
+          dashedHeavy: "Dashed Heavy"
+          dashedLight: "Dashed Light"
+          double: "Double"
+          heavy: "Heavy"
+          light: "Light"
+          lightRounded: "Light Rounded"
   label:
     display-name: "Label"
   group:
