--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -34,6 +34,14 @@ components:
       dialog:
         title: "Project Name"
         description: "Here you can change the name of the project."
+  issue-dialog:
+    title: "Report a bug or suggest a feature"
+    description: "This site doesn't have an ticket-management system on it's own. So all tickets are handled with GitHub."
+    account-required: "Note: A GitHub account is required to create a ticket"
+    bug: "Report Bug"
+    feature: "Suggest Feature"
+    copy-commit-hash:
+      tooltip: "Copy Commit Hash"
 home:
   dev-notice: "Note: This app is under development"
   draw: "Draw Something"
