--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -34,6 +34,8 @@ components:
       dialog:
         title: "Project Name"
         description: "Here you can change the name of the project."
+  download-project:
+    tooltip: "Download this project"
   issue-dialog:
     title: "Report a bug or suggest a feature"
     description: "This site doesn't have an ticket-management system on it's own. So all tickets are handled with GitHub."
@@ -85,8 +87,6 @@ app:
         project:
           tooltip: "Upload an existing project"
       export:
-        project:
-          tooltip: "Download this project"
         share:
           tooltip: "Share this graph with other people"
         clipboard:
