added simple context-menu to the canvas

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -115,6 +115,23 @@ app:
         tooltip: "Vergrößern"
       out:
         tooltip: "Verkleinern"
+  context-menu:
+    cut:
+      label: "Ausschneiden"
+      shortcut: "Strg+X"
+    copy:
+      label: "Kopieren"
+      shortcut: "Strg+C"
+    paste:
+      label: "Einfügen"
+      shortcut: "Strg+V"
+    raise:
+      label: "Raise"
+    lower:
+      label: "Lower"
+    delete:
+      label: "Löschen"
+      shortcut: "Entfernen"
   dialog:
     share:
       title: "Link zum Teilen"
