added fit-to-content button to the label edit component

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -196,6 +196,7 @@ actions:
     edit:
       text:
         label: "Text"
+      fit-to-content: "An Inhalt anpassen"
   group:
     display-name: "Gruppe"
     edit:
