--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -195,6 +195,7 @@ actions:
     edit:
       text:
         label: "Text"
+      fit-to-content: "Fit to Content"
   group:
     display-name: "Group"
     edit:
