--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -156,6 +156,16 @@ app:
         backticks: "Backticks"
         fourSpaces: "Vier Leerzeichen"
         semicolons: "Semikolon"
+      warnings:
+        ascii:
+          title: "Es werden nur einfache Ascii-Zeichen verwendet"
+          description: "In Ihrem Diagramm werden nur einfache Charaktere verwendet. Das Diagramm sollte in jeder Anwendung korrekt angezeigt werden."
+        extended-ascii:
+          title: "Einige Extended-Ascii-Zeichen werden verwendet"
+          description: "Ihr Diagramm verwendet einige Schriftzeichen aus dem Extended-Ascii-Satz. Das Diagramm sollte in fast allen Anwendungen korrekt angezeigt werden."
+        unicode:
+          title: "Unicode-Zeichen werden verwendet"
+          description: "Ihr Diagramm verwendet einige Unicode-Zeichen. Einige (ältere) Anwendungen unterstützen diese Zeichen möglicherweise nicht oder zeigen sie nicht korrekt an."
     export-image:
       title: "Exportieren des Graphen als Bild"
       description: "Der Graph wird als Bild gerendert, das Sie auf Ihrer Website oder in Ihrer README verwenden können."
