smarter redirect for /app/ and added list-link to project-list

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -34,6 +34,8 @@ components:
       dialog:
         title: "Projekt Name"
         description: "Hier können Sie den Namen des Projekts ändern."
+    list-link:
+      tooltip: "Alle Projekte anzeigen"
   download-project:
     tooltip: "Dieses Projekt herunterladen"
   issue-dialog:
